--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,10 @@
         <div class="container">
 		<p>
                 <span class="footerline">{{ 'now' | date: "%Y"}} &copy; infoRekt</span>
-		<span class="footerright"><a class="footerlink" href="/feed.xml">RSS</a></span>
+		<span class="footerright">
+			<a class="footerlink" href="/feed.xml">RSS</a> &nbsp;
+	        	<a href="https://twitter.com/0xinforekt"><img src="/static/img/twitter.png" width="14px" height="14px"></a>
+		</span>
 		
         </div>
     </footer>
