--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
     <footer  class="footnote">
         <div class="container">
 		<p>
-                <span class="footerline">{{ 'now' | date: "%Y"}} &copy; infoRekt</span>
+                <span class="footerline">{{ 'now' | date: "%Y"}} &copy; InfoRekt</span>
 		<span class="footerright">
 			<a class="footerlink" href="/feed.xml">RSS</a> &nbsp;
 	        	<a href="https://twitter.com/0xinforekt"><img src="/static/img/twitter.png" width="14px" height="14px"></a>
