scroll to top, fix in formatting and images

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/typed.js"></script>
     <script type="text/javascript" src="/static/js/jquery.cookiebar.js"></script>
+    <script type="text/javascript" src="/static/js/scroll.js"></script>
     <script type="text/javascript">
 	    $(document).ready(function(){
         	    $.cookieBar({
