--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -323,3 +323,21 @@ position: absolute;
 margin-top:-3px;
 }
 
+.scrollToTop{
+	width:40px; 
+	height:40px;
+	padding:10px; 
+	text-align:center; 
+	background: whiteSmoke;
+	font-weight: bold;
+	color: #444;
+	text-decoration: none;
+	position:fixed;
+	bottom:75px;
+	right:40px;
+	display:none;
+	background: url('/static/img/arrow_up.png') no-repeat 0px 0px;
+}
+.scrollToTop:hover{
+	text-decoration:none;
+}
